<resources>
    <string name="app_name">SIR Invoices</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1296888023851596</string>
    <string name="fb_login_protocol_scheme">fb1296888023851596</string>
    <string name="update_stocks">Update stocks from stock module to start Invoicing</string>
    <string name="swipe_to_manage">Swipe to manage</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="go_pro">Go Pro</string>
    <string name="stripe_txt">Stripe is an online payment processing platform that enables you to receive payments securely from your customers.</string>
    <string name="paypal_txt">Paypal is a quick and secure platform to receive funds or set up a merchant account.</string>
    <string name="already_subscribed">You have already subscribed!</string>
    <string name="home_lets">Let\'s gets started</string>
    <string name="home_AddyourBusiness">Add your Business info</string>
    <string name="home_AddyourCustomer">Add your Customers</string>
    <string name="home_trackinventory">If you wish to track inventory</string>
    <string name="home_AddyourProducts">Add your Products</string>
    <string name="home_AddyourWarehouse">Add your Warehouse</string>
    <string name="home_donttrackinventory">If you wish to accept online payments</string>
    <string name="home_AddyourItems">Add your Items</string>
    <string name="home_SetupPayment">Set up Payment Gateway</string>
    <string name="home_CreateyourInvoice">Create your Invoice</string>
    <string name="permission_title">Permission Denied</string>
    <string name="permission_message">You are not allowed to perform any action</string>
    <string name="user_Name_2">Name<font color='#FF0000'>*</font></string>
    <string name="user_Email_Addess_2">Email<font color='#FF0000'>*</font></string>
    <string name="user_Password_2">Password<font color='#FF0000'>*</font></string>
    <string name="company_WarehouseName2">Warehouse Name<font color='#FF0000'>*</font></string>
    <string name="company_WarehouseAddress2">Warehouse Address<font color='#FF0000'>*</font></string>
    <string name="stock_Select_Product_2">Select Product<font color='#FF0000'>*</font></string>
    <string name="company_Company_Name_2">Business Name<font color='#FF0000'>*</font></string>
    <string name="company_Choose_Default_Currency_2">Choose Default Currency<font color='#FF0000'>*</font></string>
    <string name="company_Enter_IBAN_2">Enter IBAN</string>
    <string name="company_Enter_Bank_Name_2">Enter Bank Name</string>
    <string name="company_Enter_Swift_BIC_2">Enter Swift BIC</string>
    <string name="product_Product_Name_2">Product Name<font color='#FF0000'>*</font></string>
    <string name="product_Per_Unit_Price_2">Per Unit Price<font color='#FF0000'>*</font></string>
    <string name="product_Product_Category_2">Product Category<font color='#FF0000'>*</font></string>
    <string name="product_Measurement_Unit_2">Measurement Unit<font color='#FF0000'>*</font></string>
    <string name="item_Item_Name_2">Item Name<font color='#FF0000'>*</font></string>
    <string name="item_Item_Rate_2">Item Rate<font color='#FF0000'>*</font></string>
    <string name="item_Select_Category_2">Select Category<font color='#FF0000'>*</font></string>
    <string name="item_Measurement_Unit_2">Measurement Unit<font color='#FF0000'>*</font></string>
    <string name="tax_Tax_Name_2">Tax Name<font color='#FF0000'>*</font></string>
    <string name="tax_Tax_Rate_2">Tax Rate(%)<font color='#FF0000'>*</font></string>
    <string name="customer_CustomerCompany_Name_2">Customer/Business Name<font color='#FF0000'>*</font></string>
    <string name="supplier_SupplierCompany_Name_2">Supplier/Business Name<font color='#FF0000'>*</font></string>
    <string name="stock_Send_from_warehouse_2">Send from warehouse<font color='#FF0000'>*</font></string>
    <string name="stock_Send_to_warehouse_2">Send to warehouse<font color='#FF0000'>*</font></string>
    <string name="stock_Enter_Quantity_2">Enter Quantity<font color='#FF0000'>*</font></string>
    <string name="stock_SelectWarehouse_2">Select Warehouse (s)<font color='#FF0000'>*</font></string>
    <string name="invoiceInv_2">Inv #<font color='#FF0000'>*</font></string>
    <string name="invoiceDDMMYYYY_2">DD-MM-YYYY<font color='#FF0000'>*</font></string>
    <string name="invoice_EnterName_2">Enter Name<font color='#FF0000'>*</font></string>
    <string name="invoice_0days_2">0days<font color='#FF0000'>*</font></string>
    <string name="invoiceEst_2">Est #<font color='#FF0000'>*</font></string>
    <string name="poNo_2">PO No.<font color='#FF0000'>*</font></string>
    <string name="pvNo_2">PV No.<font color='#FF0000'>*</font></string>
    <string name="stock_Select_Warehouse_2">Select Warehouse<font color='#FF0000'>*</font></string>
    <string name="invoiceXDC10220_2">XDC 102-20<font color='#FF0000'>*</font></string>
    <string name="invoiceXDC10220">XDC 102-20</string>
    <string name="dropCash">Cash</string>
    <string name="dropCheque">Cheque</string>
    <string name="dropBank">Bank</string>
    <string name="dropCreditCard">Credit Card</string>
    <string name="dropPaypal">Paypal</string>
    <string name="dropOthers">Others</string>
    <string name="noti_invoice_seen">Your invoice has been seen by</string>
    <string name="htmlview_credit_note">CREDIT NOTE</string>
    <string name="htmlview_Recipient">Recipient</string>
    <string name="htmlview_CreditNoteNo">Credit Note No</string>
    <string name="htmlview_CreditNoteDate">Credit Note Date</string>
    <string name="htmlview_ReferenceNo">Reference No</string>
    <string name="htmlview_SUMMARY">SUMMARY</string>
    <string name="htmlview_ProductItem">Description</string>
    <string name="htmlview_UnitofMeasurement">Unit of Measurement</string>
    <string name="htmlview_Quantity">Quantity</string>
    <string name="htmlview_Rate">Rate</string>
    <string name="htmlview_Amount">Amount</string>
    <string name="htmlview_GrossAmount">Gross Amount</string>
    <string name="htmlview_Discount">Discount</string>
    <string name="htmlview_SubTotal">SubTotal</string>
    <string name="htmlview_Tax">Tax</string>
    <string name="htmlview_Shipping">Shipping</string>
    <string name="htmlview_NetAmount">Net Amount</string>
    <string name="htmlview_PaidAmount">Paid Amount</string>
    <string name="htmlview_Notes">Notes</string>
    <string name="htmlview_Attachments">Attachments</string>
    <string name="htmlview_debit_note">DEBIT NOTE</string>
    <string name="htmlview_DebitNoteNo">Debit Note No</string>
    <string name="htmlview_DebitNoteDate">Debit Note Date</string>
    <string name="htmlview_receipt">RECEIPT</string>
    <string name="htmlview_ReceiptNo">Receipt No</string>
    <string name="htmlview_ReceiptDate">Receipt Date</string>
    <string name="htmlview_ReceivedFrom">Received From</string>
    <string name="htmlview_po">PURCHASE ORDER</string>
    <string name="htmlview_PONo">PO No</string>
    <string name="htmlview_PODate">PO Date</string>
    <string name="htmlview_DueDate">Due Date:</string>
    <string name="htmlview_Terms">Terms:</string>
    <string name="htmlview_BalanceDue">Balance Due</string>
    <string name="htmlview_pv">PAYMENT VOUCHER</string>
    <string name="htmlview_PaidTo">Paid To</string>
    <string name="htmlview_PVNo">PV No</string>
    <string name="htmlview_PVDate">PV Date</string>
    <string name="htmlview_ESTIMATE">ESTIMATE</string>
    <string name="htmlview_BillTo">Bill To</string>
    <string name="htmlview_ESTIMATENo">Estimate No</string>
    <string name="htmlview_ESTIMATEDate">Estimate Date</string>
    <string name="htmlview_INVOICE">INVOICE</string>
    <string name="htmlview_InvoiceNo">Invoice No</string>
    <string name="htmlview_InvoiceDate">Invoice Date</string>
    <string name="htmlview_THANKYOUNOTE">THANK YOU NOTE</string>
    <string name="htmlview_DearClient">Dear Client,</string>
    <string name="htmlview_Date">Date:</string>
    <string name="htmlview_GreetingsfromCompany">Greetings from Business</string>
    <string name="htmlview_Wejustwanted">We just wanted you to know that we truly enjoy working with you and feel honored to be your chosen item provider.</string>
    <string name="htmlview_Yourbusinessis">Your business is much appreciated and we will do our very best to continue to meet your high expectations.</string>
    <string name="htmlview_Yourcontinuedpatronage">Your continued patronage is a vital part of our growth and for that we are most grateful.</string>
    <string name="htmlview_Wewouldlike">We would like to thank you for your business and we look forward to serving you for many years to come.</string>
    <string name="htmlview_INVOICEDUEDATEREMINDER">INVOICE DUE DATE REMINDER</string>
    <string name="htmlview_CreditTerms">Credit Terms</string>
    <string name="htmlview_DueDate2">Due Date</string>
    <string name="htmlview_Wewouldliketobring">We would like to bring to your notice that the above mentioned Invoice number is now overdue for payment.</string>
    <string name="htmlview_Weherebyrequest">We hereby request you to kindly make immediate settlement of the same.</string>
    <string name="htmlview_Welookforward">We look forward to hearing from you in this regard.</string>
    <string name="htmlview_Note">Note:</string>
    <string name="htmlview_Ifpaymenthas">If payment has already been done, kindly disregard this notification.</string>
    <string name="dialog_no_customer_statement_report">No customer statement report</string>
    <string name="dialog_no_supplier_statement_report">No supplier statement report</string>
    <string name="dialog_no_total_sales_report">No total sales report</string>
    <string name="dialog_no_total_purchase_report">No total purchase report</string>
    <string name="dialog_no_customer_ageing_report">No customer ageing report</string>
    <string name="dialog_no_tax_collected_report">No tax collected report</string>
    <string name="dialog_no_stock_report">No stock report</string>
    <string name="dialog_no_product_movement_report">No product movement noticed</string>
    <string name="all_Save">Save</string>
    <string name="done">Done</string>
    <string name="tax_Select_Company">Select Business</string>
    <string name="tax_Tax_Name">Tax Name</string>
    <string name="tax_Tax_Rate">Tax Rate(%)</string>
    <string name="tax_Tax_Rate_as_amount">Tax Rate as amount</string>
    <string name="tax_Tax_Calculation">Tax Calculation</string>
    <string name="tax_Inclusive" translatable="false">Inclusive</string>
    <string name="tax_Exclusiven" translatable="false">Exclusive</string>
    <string name="tax_Add_new_tax">Add new tax</string>
    <string name="tax_Add">Add</string>
    <string name="dialog_OK">OK</string>
    <string name="stock_Select_Product">Select Product</string>
    <string name="stock_SearchProducts">Search Products</string>
    <string name="invoice_PaidAmount">Paid Amount</string>
    <string name="service_AddNew">Add New</string>
    <string name="service_EnterAmount">Enter Amount</string>
    <string name="service_EnterDate">Enter Date</string>
    <string name="service_SelectPaymentMode">Select Payment Mode</string>
    <string name="service_ShippingAmount">Shipping Amount</string>
    <string name="service_EnterShippingAmount">Enter Shipping Amount</string>
    <string name="service_ShippingAmountInvoice">Do you want to add Shipping amount for this Invoice?</string>
    <string name="service_Amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="Date">Date</string>
    <string name="Tax">Tax</string>
    <string name="dialog_Camera">Camera</string>
    <string name="dialog_Gallery">Gallery</string>
    <string name="dialog_Cancel">Cancel</string>
    <string name="dialog_AddImage">Add Image</string>
</resources>