<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sir.com.sir.Tax.Add_Tax"
    android:background="@color/white">

    <com.isapanah.awesomespinner.AwesomeSpinner
        android:id="@+id/selectcompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spinnerDirection="ltr"
        app:spinnerHint="@string/tax_Select_Company"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittextshape"

        />

    <EditText

        android:layout_below="@+id/selectcompany"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tax_Tax_Name_2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="12dp"
        android:padding="15dp"
        android:background="@drawable/search_shape"
        android:elevation="2dp"
        android:id="@+id/taxname"
        android:textColorHint="@color/dark_grey"
        />

    <EditText

        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxname"
        android:hint="@string/tax_Tax_Rate_2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="12dp"
        android:padding="15dp"
        android:background="@drawable/search_shape"
        android:elevation="2dp"
        android:id="@+id/taxpercent"
        android:inputType="numberDecimal"
        android:textColorHint="@color/dark_grey"/>



    <EditText

        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxpercent"
        android:hint="@string/tax_Tax_Rate_as_amount"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="12dp"
        android:padding="15dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:id="@+id/taxamounttxt"
        android:inputType="numberDecimal"
        android:visibility="gone"/>

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taxcalculation"
        android:layout_below="@+id/taxpercent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/tax_Tax_Calculation"
        android:textColor="@color/lightpurple"
        />

    <RadioGroup
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/radiogroup"
        android:orientation="horizontal"
        android:layout_below="@id/taxcalculation">
        <RadioButton
            android:id="@+id/rinclusive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/d_grey"
            android:buttonTint="@color/lightpurple"
            android:text="@string/tax_Inclusive" />

        <RadioButton
            android:textColor="@color/d_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_Exclusiven"
            android:buttonTint="@color/lightpurple"
            android:layout_marginLeft="80dp"
            android:id="@+id/rexclusive"
            />

    </RadioGroup>


    <Button
        android:layout_below="@+id/taxamounttxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/tax_Add_new_tax"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="?actionBarSize"
        android:id="@+id/add"
        android:background="@drawable/buttonshape"
        style="?android:attr/borderlessButtonStyle"
        />

    <ImageView
        android:visibility="gone"
        android:id="@+id/avibackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"/>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        style="@style/AVLoadingIndicatorView"
        android:visibility="gone"
        app:indicatorName="BallClipRotatePulseIndicator"

        />

</RelativeLayout>
