<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/createbottomsheet_curve">

    <TextView
        android:id="@+id/txttax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Tax"
        android:textColor="@color/dark_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/add_service_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txttax"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/tax_Add"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/add_service_new"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taxrecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search">

        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

    <Switch
        android:id="@+id/taxswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/r1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:checked="false"

        android:text="@string/tax_Inclusive"
        android:textColor="@color/dark_blue" />

    <Button
        android:id="@+id/taxbtndone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taxswitch"
        android:layout_margin="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>