<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:background="@drawable/createdialog_curve"
        >


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/service_ShippingAmount"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:id="@+id/txtfreight"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_ShippingAmountInvoice"
            android:layout_below="@id/txtfreight"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txtfreightdes"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_10sdp"
            />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txtfreightdes"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:hint="@string/service_EnterShippingAmount"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/_10sdp"
            android:paddingTop="0dp"
            android:paddingLeft="10dp"
            android:id="@+id/edfreight"
            android:background="@drawable/edittextshape"
            android:elevation="2dp"
            android:inputType="numberDecimal"

            />


        <Button

            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edfreight"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/btncancel"
            android:background="@drawable/buttonshape"
            android:text="@string/dialog_OK"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:id="@+id/btnok"
            android:textSize="@dimen/_10sdp"
            />

        <Button

            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edfreight"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cancelbuttonshape"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:id="@+id/btncancel"
            android:layout_marginBottom="40dp"
            android:textSize="@dimen/_10sdp"
            />

    </RelativeLayout>
</RelativeLayout>