<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/createbottomsheet_curve">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_Select_Product"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_blue"
        android:id="@+id/txtproduct"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/search_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/stock_SearchProducts"
        android:layout_marginTop="20dp"
        android:layout_below="@id/txtproduct"
        android:id="@+id/search"
        android:padding="10dp"
        android:background="@drawable/edittextshape"
        android:elevation="3dp"
        android:maxLines="1"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_AddNew"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_blue"
        android:id="@+id/add_product_new"
        android:layout_below="@+id/search"
        android:padding="5dp"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/add_product_new"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="45dp">

    </androidx.recyclerview.widget.RecyclerView>



</RelativeLayout>